# ouranos-chatbot

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ouranos_chatbot/: __init__.py  auth.py  commands.py  config.py  decorators.py  main.py  plugin_setup.py
src/ouranos_chatbot/messages/: __init__.py
src/ouranos_chatbot/messages/templates/: __init__.py  actuators_state.html  current_sensors.html  ecosystems_available.html  ecosystems_status.html
