[metadata]
name=Ouranos-chatbot
version=0.5.3
author = Valentin Ambroise
author_email = valentin.ambroise@outlook.com
description = A telegram chatbot for Ouranos
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
package_dir = = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
